[tool.pdm]

[project]
name = "ip_calculator"
version = "1.0.0"
description = "Display IP and Network data from input"
authors = [
    {name = "Gabriel Martín del Campo y Eternod", email = "gmartindelcye@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
